# candle-cormel

./: .gitignore  ANEMLL_GUIDE.md  CLAUDE.md  CODE_REVIEW_SUGGESTIONS.md  CUSTOM_MODEL_GUIDE.md  Cargo.toml  Claude.md  INVESTIGATION_REPORT.md  LICENSE-APACHE  LICENSE-MIT  README.md  chat.py  check_chat_tokens.py  check_ffn_functions.py  check_lm_head_output.py  check_logits_order.py  check_token.rs  cleanup_coreml_caches.sh  debug_mlstate.rs  debug_qwen_infer.rs  debug_sampling.py  discover_ffn_inputs.py  discover_position_ids.py  final_diagnosis.py  inspect_io_names.py  inspect_models.py  inspect_shapes.py  investigate_logits.py  local-ci.sh  qwen-chat-test.py  qwen-lm_head.py  run_chat_test.sh  run_integration_tests.sh  run_unit_tests.sh  rust_embeddings.npy  test_all_inputs.py  test_autoregressive.py  test_batch_size_fix.rs  test_chat_direct.py  test_components_python.py  (+10 more)
.github/workflows/: ci.yml  release.yml
benches/: coreml_operations.rs  inference_profiling.rs  quick_profiling.rs  qwen_inference.rs
configs/: anemll-qwen3-0.6b.json  typo-fixer-auto.json  typo-fixer-corrected.json  typo-fixer-final.json  typo-fixer-working.json  typo-fixer.json
examples/: README.md  WORKED_EXAMPLE.md  bundle_id_child_test.rs  bundle_id_test.rs  clean_download_example.rs  compare_loading_approaches.rs  debug_mlstate.rs  debug_quick_brown_fox.rs  demonstrate_test_failure.rs  proper_quality_test.rs  qwen_complete_demo.rs  qwen_end_to_end.rs  qwen_one_pass_chat.rs  qwen_simple_demo.rs  recommended_api_demo.rs  test_shape_fix.rs  test_thinking_behavior.rs  typo_fixer.rs
examples/advanced/: embeddings.rs
examples/basic/: bert_inference.rs
examples/benchmarks/: bert_comparison.rs  tensor_conversion.rs
examples/qwen/: README.md  qwen_benchmark.rs  qwen_chat.rs  qwen_demo_patterns.rs  qwen_multi_component.rs  qwen_performance_benchmark.rs
qwen-model/: README.md  config.json  meta.yaml
qwen-model/objc-coreml-test/: Package.swift
qwen-model/objc-coreml-test/Sources/: main.m
src/: api_recursive_downloader.rs  builder.rs  builtin_configs.rs  cache_manager.rs  clean_git_lfs_downloader.rs  config.rs  config_generator.rs  conversion.rs  debug_components.rs  git2_downloader.rs  git_lfs_downloader.rs  http_lfs_downloader.rs  infer_shape_test.rs  lib.rs  model.rs  model_config.rs  model_downloader.rs  multi_component_downloader.rs  pipeline.rs  qwen.rs  qwen_shapes_test.rs  robust_downloader.rs  state.rs  test_utils.rs  unified_model_loader.rs  utils.rs
src/cache/: mod.rs
src/config/: basic.rs  mod.rs  model.rs
src/config/generator/: caching.rs  coreml_metadata.rs  file_discovery.rs  manifest_parser.rs  mod.rs  schema_extractor.rs  shape_inference.rs
src/config_generator/: caching.rs  coreml_metadata.rs  file_discovery.rs  manifest_parser.rs  mod.rs  schema_extractor.rs  shape_inference.rs
src/download/: mod.rs  unified.rs
src/qwen/: config.rs  embeddings.rs  inference.rs  mod.rs  model.rs  naming.rs  tensors.rs  utilities.rs
test_tensors/: 01_input_tokens.npy  01_input_tokens_metadata.txt  02_embeddings_input.npy  02_embeddings_input_metadata.txt  02_embeddings_output.npy  02_embeddings_output_metadata.txt  03_ffn_prefill_causal_mask.npy  03_ffn_prefill_causal_mask_metadata.txt  03_ffn_prefill_current_pos_metadata.txt  03_ffn_prefill_hidden_input.npy  03_ffn_prefill_hidden_input_metadata.txt  03_ffn_prefill_output.npy  03_ffn_prefill_output_metadata.txt  03_ffn_prefill_position_ids_metadata.txt  04_infer_causal_mask.npy  04_infer_causal_mask_metadata.txt  04_infer_ffn_hidden_input.npy  04_infer_ffn_hidden_input_metadata.txt  04_infer_ffn_output.npy  04_infer_ffn_output_metadata.txt  04_infer_input_token.npy  04_infer_input_token_metadata.txt  04_infer_position_ids_metadata.txt  04_infer_token_embeddings.npy  04_infer_token_embeddings_metadata.txt  04_infer_update_mask.npy  04_infer_update_mask_metadata.txt  05_lmhead_combined_logits.npy  05_lmhead_combined_logits_metadata.txt  05_lmhead_input.npy  05_lmhead_input_metadata.txt  05_lmhead_logits1.npy  05_lmhead_logits10.npy  05_lmhead_logits10_metadata.txt  05_lmhead_logits11.npy  05_lmhead_logits11_metadata.txt  05_lmhead_logits12.npy  05_lmhead_logits12_metadata.txt  05_lmhead_logits13.npy  05_lmhead_logits13_metadata.txt  (+30 more)
tests/: README.md  README_REFACTORING.md  backwards_phase_isolation_test.rs  builder_tests.rs  comprehensive_qwen_tests.rs  config_generator_tests.rs  conversion_tests.rs  coreml_framework_investigation.rs  debug_coreml_call.rs  debug_qwen_vs_direct.rs  discover_shapes_tests.rs  embeddings_debug_test.rs  embeddings_precision_debug.rs  embeddings_simple_debug.rs  ffn_granular_debug.rs  ffn_infer_isolation_test.rs  ffn_prefill_infer_state_test.rs  ffn_prefill_lm_head_continuity_test.rs  flex_pipeline_tests.rs  infer_position_ids_shape_tests.rs  integration_pipelines.rs  integration_qwen.rs  integration_tests.rs  integration_tests.rs.backup  lm_head_isolation_test.rs  metadata_function_extraction_tests.rs  model_loading_comparison.rs  model_quality_verification.rs  performance_regression.rs  performance_regression_tests.rs  prediction_options_test.rs  python_rust_comparison.rs  python_rust_side_by_side.rs  python_wrapper_sanity_check.rs  qwen_anemll_integration_tests.rs  qwen_architecture_success_test.rs  qwen_exact_python_test.rs  qwen_ffn_output_debug.rs  qwen_infer_phase_debug.rs  qwen_input_comparison.rs  (+22 more)
tests/common/: helpers.rs  mocks.rs  mod.rs  test_utils.rs
tests/fixtures/: typo_fixer_prefill_plan_golden.json  typo_fixer_tensors.json
tests/fixtures/flex_pipeline/: README.md  corrected_pipeline.py  corrected_step_2_causal_mask.json  regenerate_corrected_data.py  (+2 more)
tests/integration/: coreml.rs  flex_pipeline_tests.rs  mod.rs  pipelines.rs  qwen.rs
tests/regression/: mod.rs  performance_regression_tests.rs  verify_batch_size_fix.rs
tests/unit/: builders.rs  config.rs  coreml_metadata_extraction_tests.rs  infer_shape_test.rs  mod.rs  qwen_shapes_test.rs  tensors.rs
tools/: discover_shapes.py  generate_anemll_qwen_config.py  generate_typo_fixer_config_example.sh  shape_env_requirements.txt
(+1 files in other folders)
