[package]
name = "candle-coreml"
version = "0.2.2"
edition = "2021"
description = "CoreML inference engine for Candle tensors - provides Apple CoreML/ANE integration with real tokenization, safety fixes, and model calibration awareness"
repository = "https://github.com/mazhewitt/candle-cormel"
homepage = "https://github.com/mazhewitt/candle-cormel"
documentation = "https://docs.rs/candle-coreml"
keywords = ["machine-learning", "coreml", "candle", "apple-neural-engine", "sentiment-analysis"]
categories = ["science", "api-bindings"]
license = "MIT OR Apache-2.0"
authors = ["candle-coreml contributors"]
exclude = ["target/", "examples/models/", ".git/", "*.mlmodelc", "*.mlpackage"]
readme = "README.md"

[dependencies]
# Published Candle crates from crates.io
candle-core = "0.9.1"
candle-transformers = "0.9.1" 
candle-nn = "0.9.1"

# Other dependencies
tokenizers = "0.20.3"
anyhow = "1.0"
hf-hub = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
dirs = "5.0"
git2 = "0.18"
half = "2.4"
tracing = "0.1"
once_cell = "1.19"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
objc2-core-ml = "0.3.1"
block2 = "0.6.1"

[workspace]
# Empty workspace table to prevent being part of parent workspace

[features]
default = []

[[example]]
name = "bert_inference"
path = "examples/basic/bert_inference.rs"

[[example]]
name = "embeddings"
path = "examples/advanced/embeddings.rs"

[[example]]
name = "bert_comparison"
path = "examples/benchmarks/bert_comparison.rs"

[[example]]
name = "tensor_conversion"
path = "examples/benchmarks/tensor_conversion.rs"

[[example]]
name = "qwen_chat"
path = "examples/qwen/qwen_chat.rs"

[[example]]
name = "qwen_benchmark"
path = "examples/qwen/qwen_benchmark.rs"

[[example]]
name = "qwen_multi_component"
path = "examples/qwen/qwen_multi_component.rs"

[[example]]
name = "qwen_demo_patterns"
path = "examples/qwen/qwen_demo_patterns.rs"

[[example]]
name = "clean_download_example"
path = "examples/clean_download_example.rs"

[[example]]
name = "qwen_performance_benchmark"
path = "examples/qwen/qwen_performance_benchmark.rs"

[[bench]]
name = "qwen_inference"
harness = false

[[bench]]
name = "coreml_operations"
harness = false

[[bench]]
name = "quick_profiling"
harness = false

[[bench]]
name = "inference_profiling"
harness = false

[[bin]]
name = "simple_performance"
path = "bin/simple_performance.rs"


[[bin]]
name = "component_profiler"
path = "bin/component_profiler.rs"


