[package]
name = "candle-coreml"
version = "0.2.4"
edition = "2021"
description = "CoreML inference engine for Candle tensors - provides Apple CoreML/ANE integration with real tokenization, safety fixes, and model calibration awareness"
repository = "https://github.com/mazhewitt/candle-cormel"
homepage = "https://github.com/mazhewitt/candle-cormel"
documentation = "https://docs.rs/candle-coreml"
keywords = ["machine-learning", "coreml", "candle", "apple-neural-engine", "sentiment-analysis"]
categories = ["science", "api-bindings"]
license = "MIT OR Apache-2.0"
authors = ["candle-coreml contributors"]
exclude = ["target/", "examples/models/", ".git/", "*.mlmodelc", "*.mlpackage", "mistral-model/", ".shape-env/"]
readme = "README.md"

[dependencies]

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Published Candle crates from crates.io (latest major versions)
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"

# Other dependencies (latest major versions)
tokenizers = "0.21.4"
anyhow = "1"
hf-hub = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
dirs = "6.0.0"
git2 = "0.19"
half = "2"
tracing = "0.1"
once_cell = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
criterion = { version = "0.7.0", features = ["html_reports"] }
which = "8.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-ml = "0.3"
block2 = "0.6"

# No workspace members - this is now a standalone library

[features]
default = []

[[example]]
name = "bert_inference"
path = "examples/basic/bert_inference.rs"

[[example]]
name = "embeddings"
path = "examples/advanced/embeddings.rs"

[[example]]
name = "bert_comparison"
path = "examples/benchmarks/bert_comparison.rs"

[[example]]
name = "tensor_conversion"
path = "examples/benchmarks/tensor_conversion.rs"

[[example]]
name = "qwen_chat"
path = "examples/qwen/qwen_chat.rs"

[[example]]
name = "qwen_benchmark"
path = "examples/qwen/qwen_benchmark.rs"

[[example]]
name = "qwen_multi_component"
path = "examples/qwen/qwen_multi_component.rs"

[[example]]
name = "qwen_demo_patterns"
path = "examples/qwen/qwen_demo_patterns.rs"

[[example]]
name = "clean_download_example"
path = "examples/clean_download_example.rs"

[[example]]
name = "qwen_performance_benchmark"
path = "examples/qwen/qwen_performance_benchmark.rs"

[[bench]]
name = "qwen_inference"
harness = false

[[bench]]
name = "coreml_operations"
harness = false

[[bench]]
name = "quick_profiling"
harness = false

[[bench]]
name = "inference_profiling"
harness = false

[[bin]]
name = "simple_performance"
path = "bin/simple_performance.rs"


[[bin]]
name = "component_profiler"
path = "bin/component_profiler.rs"


[[bin]]
name = "step_pipeline"
path = "bin/step_pipeline.rs"


